# bn-portfolio

./: .isort.cfg  README.md
algo/: README.md
algo/adjMat/: adjMat.cpp  adjMat.py
algo/adjMat/graph_traversals/: gt.py
algo/knapsackPB/: knapsack.py
algo/metro/: README.md  metro.py
algo/metro/data/txt/: stations.txt  time.txt
aws_rekoapi/: README.md  pyproject.toml  requirement.txt
aws_rekoapi/website/: db.sqlite3  manage.py
aws_rekoapi/website/rekoface/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
aws_rekoapi/website/static/fonts/glyphicons/: selection.json
aws_rekoapi/website/static/js/: flat-ui-pro.min.js
aws_rekoapi/website/static/js/webcamjs/: DOCS.md  bower.json  package.json
aws_rekoapi/website/static/js/webcamjs/flash/: Webcam.as
aws_rekoapi/website/static/js/webcamjs/flash/com/adobe/images/: BitString.as  PNGEncoder.as
aws_rekoapi/website/static/js/webcamjs/flash/mx/utils/: Base64Encoder.as
aws_rekoapi/website/templates/: base.html
aws_rekoapi/website/website/: settings.py  urls.py  wsgi.py
dlnd/Convolutional Autoencoder/: README.md
dlnd/DCGAN/: README.md
dlnd/Face Generation/: README.md
dlnd/First Image Classification/: README.md
dlnd/Language Translation/: README.md
dlnd/Play with Autoencoder/: README.md
dlnd/Play with GANs/: README.md
dlnd/Q-learning cart/: README.md
dlnd/Skip Grams/: README.md
dlnd/seq2seq/: README.md
mlnd/: README.md
