[tool.poetry]
name = "aws_rekoapi"
version = "0.1.0"
description = ""
authors = ["Ben Chen <bn@benbenbang.io>"]

[tool.poetry.dependencies]
python = "3.7.11"
boto3 = "^1.16.19"
click = "^7.1.2"
Pillow = ">=9"
Jinja2 = "^2.11.3"
Django = "<3"
urllib3 = ">=1.26.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
